# GraphX

./: CMakeLists.txt  README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: fragment.shader  main.cpp  vertical.shader
